@@ -24,160 +24,132 @@
  */
 package org.spongepowered.common.util;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-import net.minecraft.core.MappedRegistry;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
+import net.minecraft.core.component.DataComponents;
 import net.minecraft.world.entity.projectile.FireworkRocketEntity;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
-import org.checkerframework.checker.nullness.qual.Nullable;
-import org.spongepowered.api.Sponge;
+import net.minecraft.world.item.component.FireworkExplosion;
+import net.minecraft.world.item.component.Fireworks;
 import org.spongepowered.api.item.FireworkEffect;
-import org.spongepowered.api.item.FireworkShape;
 import org.spongepowered.api.item.ItemTypes;
-import org.spongepowered.api.registry.RegistryTypes;
-import org.spongepowered.api.util.Color;
+import org.spongepowered.common.accessor.world.entity.EntityAccessor;
 import org.spongepowered.common.accessor.world.entity.projectile.FireworkRocketEntityAccessor;
-import org.spongepowered.common.item.SpongeFireworkEffectBuilder;
 import org.spongepowered.common.item.SpongeItemStack;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.OptionalInt;
+import java.util.function.Function;
 
 public final class FireworkUtil {
-
-    public static @Nullable FireworkEffect getStarEffect(final ItemStack item) {
-        Preconditions.checkArgument(item.getItem() == Items.FIREWORK_STAR, "Item is not a firework star!");
-        final @Nullable CompoundTag tag = item.getTagElement(Constants.Entity.Firework.EXPLOSION);
-        if (tag == null) {
-            return null;
-        }
-        return FireworkUtil.fromCompound(tag);
+    public static boolean setFireworkEffects(final FireworkRocketEntity firework, final List<? extends FireworkEffect> effects) {
+        return FireworkUtil.updateFireworkRocketItem(firework, item -> FireworkUtil.setFireworkEffects(item, effects));
     }
 
-    public static FireworkEffect fromCompound(final CompoundTag compound) {
-        final FireworkEffect.Builder builder = new SpongeFireworkEffectBuilder();
-        if (compound.contains(Constants.Item.Fireworks.FLICKER)) {
-            builder.flicker(compound.getBoolean(Constants.Item.Fireworks.FLICKER));
-        }
-        if (compound.contains(Constants.Item.Fireworks.TRAIL)) {
-            builder.trail(compound.getBoolean(Constants.Item.Fireworks.TRAIL));
-        }
-        if (compound.contains(Constants.Item.Fireworks.SHAPE_TYPE)) {
-            final byte type = compound.getByte(Constants.Item.Fireworks.SHAPE_TYPE);
-            final MappedRegistry<FireworkShape> registry = (MappedRegistry<FireworkShape>) (Object) Sponge.game().registry(RegistryTypes.FIREWORK_SHAPE);
-            final @Nullable FireworkShape shape = registry.byId(type);
-            if (shape != null) {
-                builder.shape(shape);
-            }
-        }
-        if (compound.contains(Constants.Item.Fireworks.COLORS)) {
-            final List<Color> colors = Lists.newArrayList();
-            final int[] colorsRaw = compound.getIntArray(Constants.Item.Fireworks.COLORS);
-            for (final int color : colorsRaw) {
-                colors.add(Color.ofRgb(color));
-            }
-            builder.colors(colors);
-        }
-        if (compound.contains(Constants.Item.Fireworks.FADE_COLORS)) {
-            final List<Color> fades = Lists.newArrayList();
-            final int[] fadesRaw = compound.getIntArray(Constants.Item.Fireworks.FADE_COLORS);
-            for (final int fade : fadesRaw) {
-                fades.add(Color.ofRgb(fade));
-            }
-            builder.fades(fades);
-        }
-
-        return builder.build();
-    }
-
-    public static CompoundTag toCompound(final FireworkEffect effect) {
-        final MappedRegistry<FireworkShape> registry = (MappedRegistry<FireworkShape>) (Object) Sponge.game().registry(RegistryTypes.FIREWORK_SHAPE);
-
-        final CompoundTag tag = new CompoundTag();
-        tag.putBoolean(Constants.Item.Fireworks.FLICKER, effect.flickers());
-        tag.putBoolean(Constants.Item.Fireworks.TRAIL, effect.hasTrail());
-        tag.putByte(Constants.Item.Fireworks.SHAPE_TYPE, (byte) registry.getId(effect.shape()));
-        final int[] colorsArray = effect.colors().stream()
-                .mapToInt(Color::rgb)
-                .toArray();
-        tag.putIntArray(Constants.Item.Fireworks.COLORS, colorsArray);
-        final int[] fadeArray = effect.fadeColors().stream()
-                .mapToInt(Color::rgb)
-                .toArray();
-        tag.putIntArray(Constants.Item.Fireworks.FADE_COLORS, fadeArray);
-        return tag;
-    }
-
-    public static boolean setFireworkEffects(final Object object, final List<? extends FireworkEffect> effects) {
+    public static boolean setFireworkEffects(final ItemStack item, final List<? extends FireworkEffect> effects) {
         if (effects.isEmpty()) {
-            return FireworkUtil.removeFireworkEffects(object);
+            return FireworkUtil.removeFireworkEffects(item);
         }
-        final ItemStack item = FireworkUtil.getItem(object);
+
         if (item.isEmpty()) {
             return false;
         }
 
         if (item.getItem() == Items.FIREWORK_STAR) {
-            item.addTagElement(Constants.Entity.Firework.EXPLOSION, FireworkUtil.toCompound(effects.get(0)));
+            item.set(DataComponents.FIREWORK_EXPLOSION, (FireworkExplosion) (Object) effects.getFirst());
             return true;
         } else if (item.getItem() == Items.FIREWORK_ROCKET) {
-            final CompoundTag fireworks = item.getOrCreateTagElement(Constants.Item.Fireworks.FIREWORKS);
-            fireworks.put(Constants.Item.Fireworks.EXPLOSIONS, effects.stream()
-                    .map(FireworkUtil::toCompound)
-                    .collect(NBTCollectors.toTagList()));
+            final List<FireworkExplosion> mcEffects = effects.stream().map(FireworkExplosion.class::cast).toList();
+            item.update(DataComponents.FIREWORKS, new Fireworks(1, Collections.emptyList()), p -> new Fireworks(p.flightDuration(), mcEffects));
+            return true;
+        }
+
+        return false;
+    }
+
+    public static Optional<List<FireworkEffect>> getFireworkEffects(final FireworkRocketEntity firework) {
+        return FireworkUtil.getFireworkEffects(FireworkUtil.getItem(firework));
+    }
+
+    public static Optional<List<FireworkEffect>> getFireworkEffects(final ItemStack item) {
+        if (item.isEmpty()) {
+            return Optional.empty();
+        }
+
+        if (item.getItem() == Items.FIREWORK_ROCKET) {
+            final Fireworks fireworks = item.get(DataComponents.FIREWORKS);
+            if (fireworks == null || fireworks.explosions().isEmpty()) {
+                return Optional.empty();
+            }
+            return Optional.of(fireworks.explosions().stream().map(FireworkEffect.class::cast).toList());
+        }
+
+        Preconditions.checkArgument(item.getItem() == Items.FIREWORK_STAR, "Item is not a firework star!");
+        final FireworkExplosion fireworkExplosion = item.get(DataComponents.FIREWORK_EXPLOSION);
+        if (fireworkExplosion == null) {
+            return Optional.empty();
+        }
+        return Optional.of(List.of((FireworkEffect) (Object) fireworkExplosion));
+    }
+
+    public static boolean removeFireworkEffects(final FireworkRocketEntity firework) {
+        return FireworkUtil.updateFireworkRocketItem(firework, FireworkUtil::removeFireworkEffects);
+    }
+
+    public static boolean removeFireworkEffects(final ItemStack item) {
+        if (item.isEmpty()) {
+            return false;
+        }
+
+        if (item.getItem() == Items.FIREWORK_STAR) {
+            item.remove(DataComponents.FIREWORK_EXPLOSION);
+            return true;
+        }
+        if (item.getItem() == Items.FIREWORK_ROCKET) {
+            if (item.has(DataComponents.FIREWORKS)) {
+                // keep flight duration
+                item.update(DataComponents.FIREWORKS, null, p -> new Fireworks(p.flightDuration(), Collections.emptyList()));
+            }
             return true;
         }
         return false;
     }
 
-    public static Optional<List<FireworkEffect>> getFireworkEffects(final Object object) {
-        final ItemStack item = FireworkUtil.getItem(object);
-        if (item.isEmpty()) {
-            return Optional.empty();
-        }
-
-        final List<FireworkEffect> effects;
-        if (item.getItem() == Items.FIREWORK_ROCKET) {
-            final @Nullable CompoundTag fireworks = item.getTagElement(Constants.Item.Fireworks.FIREWORKS);
-            if (fireworks == null || !fireworks.contains(Constants.Item.Fireworks.EXPLOSIONS)) {
-                return Optional.empty();
-            }
-
-            final ListTag effectCompounds = fireworks.getList(Constants.Item.Fireworks.EXPLOSIONS, Constants.NBT.TAG_COMPOUND);
-            effects = NBTStreams.toCompounds(effectCompounds)
-                    .map(FireworkUtil::fromCompound)
-                    .collect(Collectors.toList());
-        } else {
-            final @Nullable FireworkEffect effect = FireworkUtil.getStarEffect(item);
-            if (effect == null) {
-                return Optional.empty();
-            }
-            effects = ImmutableList.of(effect);
-        }
-
-        return Optional.of(effects);
+    public static boolean setFlightModifier(final FireworkRocketEntity firework, final int modifier) {
+        int lifetime = 10 * modifier + ((EntityAccessor) firework).accessor$random().nextInt(6) + ((EntityAccessor) firework).accessor$random().nextInt(7);
+        ((FireworkRocketEntityAccessor) firework).accessor$lifetime(lifetime);
+        return true;
     }
 
-    public static boolean removeFireworkEffects(final Object object) {
-        final ItemStack item = FireworkUtil.getItem(object);
+    public static boolean setFlightModifier(final ItemStack item, final int modifier) {
         if (item.isEmpty()) {
             return false;
         }
 
-        if (item.getItem() == Items.FIREWORK_STAR) {
-            final @Nullable CompoundTag tag = item.getTag();
-            if (tag == null) {
-                return true;
-            }
-            tag.remove(Constants.Entity.Firework.EXPLOSION);
+        if (item.getItem() == Items.FIREWORK_ROCKET) {
+            item.update(DataComponents.FIREWORKS, new Fireworks(1, Collections.emptyList()), p -> new Fireworks(modifier, p.explosions()));
             return true;
-        } else if (item.getItem() == Items.FIREWORK_ROCKET) {
-            final CompoundTag fireworks = item.getOrCreateTagElement(Constants.Item.Fireworks.FIREWORKS);
-            fireworks.remove(Constants.Item.Fireworks.EXPLOSIONS);
+        }
+        return false;
+    }
+
+    public static OptionalInt getFlightModifier(final FireworkRocketEntity firework) {
+        return FireworkUtil.getFlightModifier(FireworkUtil.getItem(firework));
+    }
+
+    public static OptionalInt getFlightModifier(final ItemStack item) {
+        final Fireworks fireworks = item.get(DataComponents.FIREWORKS);
+        if (fireworks == null) {
+            return OptionalInt.empty();
+        }
+        return OptionalInt.of(fireworks.flightDuration());
+    }
+
+    public static boolean updateFireworkRocketItem(final FireworkRocketEntity firework, final Function<ItemStack, Boolean> function) {
+        final ItemStack item = FireworkUtil.getItem(firework).copy();
+        if (function.apply(item)) {
+            firework.getEntityData().set(FireworkRocketEntityAccessor.accessor$DATA_ID_FIREWORKS_ITEM(), item);
             return true;
         }
         return false;
@@ -186,20 +158,9 @@ public final class FireworkUtil {
     public static ItemStack getItem(final FireworkRocketEntity firework) {
         ItemStack item = firework.getEntityData().get(FireworkRocketEntityAccessor.accessor$DATA_ID_FIREWORKS_ITEM());
         if (item.isEmpty()) {
-            item = (ItemStack) (Object) new SpongeItemStack.BuilderImpl().itemType(ItemTypes.FIREWORK_ROCKET).build();
-            firework.getEntityData().set(FireworkRocketEntityAccessor.accessor$DATA_ID_FIREWORKS_ITEM(), item);
+            return (ItemStack) (Object) new SpongeItemStack.BuilderImpl().itemType(ItemTypes.FIREWORK_ROCKET).build();
         }
         return item;
-    }
-
-    private static ItemStack getItem(final Object object) {
-        if (object instanceof ItemStack) {
-            return (ItemStack) object;
-        }
-        if (object instanceof FireworkRocketEntity) {
-            return FireworkUtil.getItem((FireworkRocketEntity) object);
-        }
-        return ItemStack.EMPTY;
     }
 
     private FireworkUtil() {
